src/snapshots/bl__tests__snapshots__cmd_expect__checked.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Assert a checkbox or radio is checked (or unchecked with --not)

Usage: bl expect checked [OPTIONS] <selector>

Arguments:
  <selector>  CSS selector of the checkbox or radio

Options:
      --not       Assert the element is NOT checked
  -v, --verbose   Enable debug logging
      --headless  Hide browser window (visible by default)
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl expect checked "#terms"
  # Pass if the box is checked

  bl expect checked "#terms" --not
  # Pass if the box is unchecked
