src/snapshots/bl__tests__snapshots__cmd_expect__enabled.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Assert an element is enabled

Usage: bl expect enabled [OPTIONS] <selector>

Arguments:
  <selector>  CSS selector of the element

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl expect enabled "button[type=submit]"
  # Pass if the button is enabled
