src/snapshots/bl__tests__snapshots__cmd_expect__hidden.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Assert an element is absent or not visible

Usage: bl expect hidden [OPTIONS] <selector>

Arguments:
  <selector>  CSS selector of the element

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl expect hidden ".spinner"
  # Pass if the element is missing or not visible
