src/snapshots/bl__tests__snapshots__cmd_expect__js.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Assert a JavaScript expression evaluates truthy

Usage: bl expect js [OPTIONS] <expression>

Arguments:
  <expression>  JS expression; false, null, empty string, and 0 fail

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl expect js "document.querySelectorAll('.error').length === 0"
  # Pass if no error elements are on the page
