src/snapshots/bl__tests__snapshots__cmd_expect__url.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Assert the current page URL

Usage: bl expect url [OPTIONS] <operator> <text>

Arguments:
  <operator>  Comparison: contains (substring) or equals (exact match) [possible values: contains, equals]
  <text>      Expected URL or URL substring

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl expect url contains "/dashboard"
  # Pass if the URL contains /dashboard

  bl expect url equals "https://example.com/"
  # Pass if the URL matches exactly
