src/snapshots/bl__tests__snapshots__cmd_expect__visible.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Assert an element is visible

Usage: bl expect visible [OPTIONS] <selector>

Arguments:
  <selector>  CSS selector of the element

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl expect visible "#save"
  # Pass if the element is visible
